--- a/app/src/main/res/layout/article_view.xml
+++ b/app/src/main/res/layout/article_view.xml
@@ -5,5 +5,5 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_text"/>
+            android:text="This is Article fragment"/>
 </LinearLayout>
