--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,23 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/flexible_activity"
         android:onClick="openFlexibleActivity"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/communicating_activity"
+        android:onClick="openCommunicatingActivity"
+        />
     <fragment
         android:name="com.example.khalid.dynamicui.ArticleFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/article_fragment"
-        />
+        tools:layout="@layout/article_view" />
 </LinearLayout>
